--- a/code/dianpingV0.4/configs/config.yaml
+++ b/code/dianpingV0.4/configs/config.yaml
@@ -11,14 +11,14 @@ log :
   MaxAge    : 30 #保留的最大天数
 mysql:
   Username: root   # 填写你的数据库账号
-  Password: wook1847 # 填写你的数据库密码
-  Host: 43.139.27.107:6789
+  Password: 123456 # 填写你的数据库密码
+  Host: 127.0.0.1:3306
   DBName: dianping
   MaxIdleConns: 30
   MaxOpenConns: 100
 Redis:
-  Host: 43.139.27.107:5678
-  Password: wook1847
+  Host: 127.0.0.1:6379
+  Password: 123456
   PoolSize: 20
 JWT:
   Secret: hello
