--- a/code/dianpingV0.7/configs/config.yaml
+++ b/code/dianpingV0.7/configs/config.yaml
@@ -11,14 +11,14 @@ log :
   MaxAge    : 30 #保留的最大天数
 mysql:
   Username: root   # 填写你的数据库账号
-  Password: wook1847 # 填写你的数据库密码
-  Host: 43.139.27.107:6789
+  Password: 123456 # 填写你的数据库密码
+  Host: 127.0.0.1:6789
   DBName: dianping
   MaxIdleConns: 30
   MaxOpenConns: 100
 Redis:
-  Host: 43.139.27.107:5678
-  Password: wook1847
+  Host: 127.0.0.1:5678
+  Password: 123456
   PoolSize: 20
 JWT:
   Secret: hello
@@ -27,7 +27,7 @@ JWT:
 mail:
   Host: smtp.163.com
   Port: 25
-  Username: lhjwook123456@163.com
+  Username: xxxxxxxxxxx@163.com #邮箱
   Password: HAQVUveNMLyrg4jz  #用于登录第三方邮件客户端的专用密码,是授权码
   To: 
-  - lhjwook123456@163.com
+  - xxxxxxxxxxx@163.com #邮箱
